@@ -1,4 +1,7 @@
 Module account_payment_clearing_cog
 ====================================
 
-Ce module ajoute la description au mouvement comptable de compensation à partir du nom du journal.
+Ce module ajoute la description au mouvement comptable de compensation à partir
+du nom du journal.
+Il permet aussi de définir sur le journal de paiement si le mouvement de
+compensation doit être émis automatiquement à la validation d'un paiement.
