@@ -1,6 +1,17 @@
-from trytond.pool import PoolMeta
+from trytond.pool import PoolMeta, Pool
+from trytond.model import ModelView, Workflow, fields
+
 
 __metaclass__ = PoolMeta
+__all__ = [
+    'Journal',
+    'Payment',
+    ]
+
+
+class Journal:
+    __name__ = 'account.payment.journal'
+    post_clearing_move = fields.Boolean('Post Clearing Move')
 
 
 class Payment:
@@ -11,3 +22,15 @@ class Payment:
         if move:
             move.description = self.journal.rec_name
         return move
+
+    @classmethod
+    @ModelView.button
+    @Workflow.transition('succeeded')
+    def succeed(cls, payments):
+        pool = Pool()
+        Move = pool.get('account.move')
+        super(Payment, cls).succeed(payments)
+        clearing_moves = [payment.clearing_move for payment in payments
+            if (payment.clearing_move and payment.journal.post_clearing_move)]
+        if clearing_moves:
+            Move.post(clearing_moves)
