@@ -4,3 +4,5 @@ depends:
     res
     account_payment_clearing
     cog_utils
+xml:
+    payment.xml
