@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<data>
+    <xpath expr="/form/field[@name='clearing_journal']" position="after">
+        <label name="post_clearing_move"/>
+        <field name="post_clearing_move"/>
+    </xpath>
+</data>
