@@ -1,1 +1,2 @@
+* Allow to automatically post clearing move
 * Module creation
